--- a/customized.html
+++ b/customized.html
@@ -30,7 +30,7 @@
         <div class="scrollToTop" id="scrtop"></div>
     </div>
     <nav id="navbar">
-        <div  id="logo" id="lg">
+        <div  id="logo">
            <a class="logo" href="index.html">
             <img src="logo/logo.png" alt="">
             <div class="name">
@@ -73,15 +73,6 @@
                         <p id="text">Get your own customized cake now! Message Us Here!</p><i class="fab fa-facebook-messenger"></i>
                     </div>
                 </div>
-                <!-- <div class="order-form" id="show">
-                    <h4>Full Name</h4><br>
-                    <input type="text" id="">
-                    <h4>Email or any Contact to Confirm your Order</h4><br>
-                    <input type="text" id="contact">
-                    <h5>Please input your desired customize cake</h5>
-                    <textarea name="" id="custom" cols="10" rows="30"></textarea><br>
-                    <button id="submit">Submit</button>
-                </div> -->
             </div>
 
             <div class="cakes1">
@@ -326,11 +317,14 @@
         <footer id="ft">
             <h1>Chosen 1s Bakeshop</h1>
             <button id="ocakes">Our Cakes</button>
-            <button id="order">Order Now</button>
+            <button id="order">About Us</button>
             <button id="contactus">Contact Us</button>
             <p>©Copyright <a href="./main.html"> <b>Chosen 1 Bakeshop.</b> </a>All Rights Reserved.</p>
         </footer>
     </div>
+
+
+    
     <script src="custom.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
      <script src="https://smtpjs.com/v3/smtp.js">
