--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="msvalidate.01" content="116A07AEC0F9DF86E599F42FC9B7FE3F" />
     <title>Chosen 1 Bakeshop</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="./fontawesome/css/all.css">
